# ALF-Scan-Viewer

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_viewer.py
alf_scan_viewer/: __init__.py  app.py  loaders.py  project.py
scripts/: build_exe.ps1  install_runtime.ps1  register_file_associations.ps1
tests/: test_app.py  test_loaders.py  test_project.py
