[project]
name = "alf-scan-viewer"
version = "0.1.0"
description = "Standalone viewer for ALF surface scanner gridmaps, meshes, and point clouds."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "dash>=4.1",
    "flask>=3.1",
    "nbformat>=5.10",
    "configargparse>=1.7",
    "requests>=2.34",
]

[project.scripts]
alf-scan-viewer = "alf_scan_viewer.app:main"

[tool.ruff]
line-length = 88
target-version = "py310"
